# mbta-on-time-lakehouse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  databricks.yml  mise.toml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  terraform.yml
dashboards/: otp.lvdash.json
databricks/jobs/: medallion_refresh.job.json
databricks/notebooks/: 01_bronze.py  02_silver.py  03_bronze_rt.py  03_bronze_rt_stream.py  04_silver_lateness.py  05_gold_otp.py  dlt_otp_marts.py  dlt_otp_spike.py  verify_dlt_equivalence.py
docs/: architecture.md  asset-bundles.md  ci-cd.md  concepts.md  cost.md  design-patterns.md  explainer.md  lakeflow-dlt.md  streaming.md  testing.md
docs/insights/: 2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  WHATS_NORMAL.md  baseline.json
docs/superpowers/plans/: 2026-06-25-dlt-productionization.md
docs/superpowers/specs/: 2026-06-25-dlt-productionization-design.md
getting-started/: index.html
resources/: medallion.job.yml  otp_dlt.pipeline.yml
roadmap/: index.html
search/: search_index.json
src/dreamer/: __init__.py  baseline.py  detect.py  dream.py  gcs_io.py  github_pr.py  gold_client.py  llm.py  run_dreamer.py
src/ingestion/: __init__.py  gcs_to_volume.py  gtfs_rt_poller.py
src/monitor/: __init__.py  run_monitor.py
src/transforms/: __init__.py  lateness.py  otp.py
terraform/: cloudrun.tf  copyjob.tf  dreamerjob.tf  main.tf  monitorjob.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_dreamer.py  test_monitor.py  test_otp_marts.py  test_poller.py  test_smoke.py  test_transforms_integration.py
under-the-hood/: index.html
website/: README.md  mkdocs.yml
website/docs/: getting-started.md  how-it-works.md  index.md  roadmap.md  showcase.md  under-the-hood.md
website/site/: 404.html  index.html  sitemap.xml
website/site/getting-started/: index.html
website/site/how-it-works/: index.html
website/site/roadmap/: index.html
website/site/showcase/: index.html
website/site/under-the-hood/: index.html
