[project]
name = "mbta-on-time-lakehouse"
version = "0.0.1"
description = "Lakehouse measuring MBTA on-time performance from live GTFS-Realtime + static schedules (S3 + Databricks)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Ingestion
    "requests>=2.32",
    "gtfs-realtime-bindings>=1.0",   # parse GTFS-RT protobuf feeds
    "boto3>=1.34",                   # AWS (S3, Kinesis) from the poller
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyspark>=3.5",                  # local Spark for unit/integration tests
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
